# OrcaCompute

./: .env.example  .gitlab-ci.yml  ARCHITECTURE.md  CNAME  ENTERPRISE_SECURITY_DELIVERY_SUMMARY.txt  Jenkinsfile  README.md  _config.yml  about.html  bitbucket-pipelines.yml  contact.html  docker-compose.cloud.yml  docker-compose.multi-dashboard.yml  docker-compose.yml  docs.html  index.html  platform.html
computeapi/: .env.example  Dockerfile  clouds.yaml  clouds.yaml.example  manage.py  pytest.ini  requirements.txt  start.sh
docker/: docker-compose.spark.yml  nginx-production-platform.conf  nginx-production.conf  nginx.conf  start-standalone.sh  start.sh  supervisord.conf
docs/: BILLING.md  LEGACY_NAME_AUDIT.txt  mock-removal-audit.md  multi-dashboard-local.md  permission-system-audit.ipynb
identity/: README.md
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  nginx-configmap.yaml  nginx-deployment.yaml  platform-deployment.yaml  platform-service.yaml  postgres-deployment.yaml  pvcs.yaml  redis-deployment.yaml  secrets.yaml
networking/: README.md
nginx/: default.conf  default.local.conf  multi-dashboard.local.conf
openstack/: README.md
orcacompute-operator/: Dockerfile  Makefile  PROJECT  go.mod
rabbitmq/: rabbitmq.conf
ruby_service/: .env.example  Rakefile  app.rb  config.ru  docker-compose.yml
scripts/: atonix-cli  audit-name-consistency.sh  build-core-containers.sh  (+11 more)
sdk/python/: README.md  pyproject.toml
sdk/python/orcacompute_sdk/: __init__.py  cli.py  client.py
(+798 files in other folders)
